# Scandium-Labs

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  KNOWN_MATERIALS_BENCHMARK.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  SECURITY.md  STYLE_GUIDE.md  benchmark_v001_a4ffffa2f1f6.json  docker-compose.yml  environment.yml  pyproject.toml  reproduce.sh  requirements.txt  setup.py
api/: auth.py  database.py  main.py  models.py  tasks.py
archive/: download_expanded.py
checkpoints/: normalizer.json
config/: data_config.yaml  deploy_config.yaml  model_config.yaml
configs/: DEPRECATED_README.md  ds_config.json  finetune_config.yaml  model_config_v3.yaml  model_config_v3_li.yaml  model_config_v3_li_no_gradnorm.yaml  model_config_v3_li_with_scheduler.yaml  phase3_config_log_eah.yaml
data/: README.md  baseline_v1.0.json  normalizer.json
docker/: Dockerfile.api  Dockerfile.training  Dockerfile.worker
docs/: ALIGNN_OPTIMIZATION.md  API_REFERENCE.md  ARCHITECTURE.md  BOTTLENECK_REPORT.md  CODE_QUALITY_REVIEW.md  COMPILE_READINESS.md  CONTRIBUTOR_GUIDE.md  DATALOADER_SEARCH.md  DATASETS.md  DATA_CARD.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  DOCS.md  DOCUMENTATION.md  DOCUMENTATION_COVERAGE_REPORT.md  ENGINEERING_DECISIONS.md  EXPERIMENT_PLAYBOOK.md  EXPERIMENT_TRACKING.md  FINAL_EXECUTIVE_REPORT.md  FINAL_SCORECARD.md  GRAPH_BREAK_REPORT.md  GRAPH_PIPELINE.md  INVESTOR_TECHNICAL_BRIEF.md  LOSS_FUNCTIONS.md  MEMORY_PROFILE.md  MODEL_ARCHITECTURE.md  (+27 more)
(+258 files in other folders)
