[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "scandium-labs"
version = "0.3.0"
description = "GNN-based solid-state electrolyte screening"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

authors = [
    {name = "Scandium Labs"},
]

dependencies = [
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
    "pymatgen>=2023.0.0",
    "mp-api>=0.30.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.2.0",
    "scipy>=1.10.0",
    "pyyaml>=6.0",
    "tqdm>=4.64.0",
    "streamlit>=1.20.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "celery>=5.3.0",
    "redis>=4.5.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "plotly>=5.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
]
gpu = [
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
